# sparql-query

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp
cmake/: version.hpp.in
include/Dice/Sparql-Query/: IQuery.hpp  ISparqlParser.hpp  ITripleStore.hpp  SelectQuery.hpp  SelectQueryResult.hpp  TriplePatternElement.hpp  TripleVariable.hpp
include/Dice/Sparql-Query/QueryCommands/: CompositePatternCommand.hpp  FilterPatternCommand.hpp  GroupPatternCommand.hpp  ILeafCommand.hpp  IQueryCommand.hpp  ISelectCommand.hpp  MinusPatternCommand.hpp  QueryModifingDecorator.hpp  SelectCommand.hpp  SelectCommandDecorator.hpp  TripleCommandPattern.hpp
include/Dice/Sparql-Query/QueryExecutors/: AbstractSelectCommand.hpp  CompositePatternCommand.hpp  FilterPatternCommand.hpp  IQueryCommand.hpp  IQueryExecutor.hpp  MinusPatternCommand.hpp  QueryDecorator.hpp  QueryModifingDecorator.hpp  SelectCommand.hpp  SolutionDecorator.hpp
include/Dice/Sparql-Query/QueryModifiers/: IQueryModifier.hpp
include/Dice/Sparql-Query/QueryModifiers/Aggregators/: IAggregator.hpp
include/Dice/Sparql-Query/QueryModifiers/ResultModifiers/: DistinctModifier.hpp  FilterModifier.hpp  IResultModifier.hpp  ReducedModifier.hpp
include/Dice/Sparql-Query/QueryNodes/: GroupNode.hpp  ICommandNode.hpp  IQueryNode.hpp  SolutionDecorator.hpp
include/Dice/Sparql-Query/QueryNodes/GroupNodes/: CompositePatternCommand.hpp  GroupNode.hpp  GroupPatternCommand.hpp  GroupPatternNode.hpp  MinusPatternNode.hpp  OptionalPatternNode.hpp
include/Dice/Sparql-Query/QueryNodes/SelectNodes/: AbstractSelectCommand.hpp  AbstractSelectNode.hpp  DefaultSelectCommand.hpp  DefaultSelectNode.hpp  DistinctSelectCommand.hpp  DistinctSelectNode.hpp  ReducedSelectCommand.hpp  ReducedSelectNode.hpp  SelectNode.hpp
include/Dice/Sparql-Query/QueryNodes/SpecialNodes/: MinusPatternNode.hpp  OptionalPatternNode.hpp  SpecialNode.hpp  UnionPatternNode.hpp
include/Dice/Sparql-Query/QueryNodes/leafNodes/: BindPatternNode.hpp  FilterPatternNode.hpp  ILeafCommand.hpp  ILeafNode.hpp  InlinePatternNode.hpp  TripleCommandPattern.hpp  TriplePatternNode.hpp
include/Dice/Sparql-Query/SolutionModifiers/: AbstractAggregator.hpp  GroupByAggregator.hpp  HavingAggregator.hpp  ISolutionModifier.hpp  LimitModifier.hpp  OffsetModifier.hpp  OrderByModifier.hpp
include/Dice/Sparql-Query/SolutionModifiers/Aggregators/: AbstractAggregator.hpp  GroupByAggregator.hpp
include/Dice/sparql-query/: TriplePatternElement.hpp  TripleVariable.hpp  version.hpp.in
include/Dice/sparql-query/Exceptions/: NotImplementedException.hpp
include/Dice/sparql-query/Nodes/: Node.hpp  SolutionDecorator.hpp
include/Dice/sparql-query/Nodes/QueryNodes/: EmptyNode.hpp  GroupNode.hpp  QueryNode.hpp
include/Dice/sparql-query/Nodes/QueryNodes/GroupingNodes/: FilteringDecorator.hpp  GroupingDecorator.hpp  GroupingNode.hpp  RegularGroupingNode.hpp  UnionGroupingNode.hpp
include/Dice/sparql-query/Nodes/QueryNodes/SelectNodes/: DefaultSelectNode.hpp  DistinctSelectNode.hpp  ReducedSelectNode.hpp  SelectNode.hpp
include/Dice/sparql-query/Nodes/QueryNodes/SpecialNodes/: GraphPatternNode.hpp  MinusPatternNode.hpp  OptionalPatternNode.hpp  ServicePatternNode.hpp  SpecialNode.hpp  UnionPatternNode.hpp
include/Dice/sparql-query/Nodes/QueryNodes/leafNodes/: BindPatternNode.hpp  FilterPatternNode.hpp  InlinePatternNode.hpp  LeafNode.hpp  TriplePatternNode.hpp
include/Dice/sparql-query/Nodes/SolutionModifiers/: LimitModifier.hpp  OffsetModifier.hpp  OrderByModifier.hpp  SolutionModifier.hpp
include/Dice/sparql-query/Nodes/SolutionModifiers/Aggregators/: Aggregator.hpp  GroupByAggregator.hpp  HavingAggregator.hpp
include/Dice/sparql-query/QueryNodes/: EmptyNode.hpp  GroupNode.hpp  IQueryNode.hpp
include/Dice/sparql-query/QueryNodes/SelectNodes/: DefaultSelectNode.hpp  DistinctSelectNode.hpp  ReducedSelectNode.hpp
include/Dice/sparql-query/QueryNodes/leafNodes/: FilterPatternNode.hpp  ILeafNode.hpp
include/Dice/sparql-query/SolutionModifiers/: LimitModifier.hpp  OrderByModifier.hpp
include/Dice/sparql-query/SolutionModifiers/Aggregators/: AbstractAggregator.hpp  HavingAggregator.hpp
tests/: CMakeLists.txt  Tests.cpp  generalTests.cpp  subscriptGeneratingTests.cpp
